# claire

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  conanfile.py
.devcontainer/: Dockerfile.clion  Dockerfile.workspace  docker-compose.clion.yml  docker-compose.dev.yml
examples/: fib.clr  fib_ideal.clr  hello_world.clr
scripts/: generate_ast_node_registry.py
src/: CMakeLists.txt  README.md
src/clrc/: CMakeLists.txt  README.md  ast.hpp  codegen.cpp  codegen.hpp  exception.cpp  exception.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  state_machine.c  state_machine.h  token.cpp  token.h  token.hpp  utils.hpp  visitor.hpp
src/clrc/codegen/: ir_code_generator.cpp  ir_code_generator.hpp  ir_codegen_visitor.hpp
src/clrc/parser/: ast.cpp  ast.hpp  ast_pretty_printer.hpp  ast_registry.hpp  ast_visitor.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  state_machine.c  state_machine.h  token.cpp  token.h
src/std/: io.clr
src/stdlib/: io.clr
tests/: CMakeLists.txt  fixtures.hpp  test_ir_codegen.cpp  test_lexer.cpp  test_parser.cpp
tests/data/: unsupported_multi_operator.clr
tests/golden_files/: test_ir_codegen.hello_world.approved.ll  test_lexer.extern.approved.txt  test_lexer.fib.approved.txt  test_lexer.hello_world.approved.txt  test_parser.expression_sequence.all_identifiers.approved.txt  test_parser.expression_sequence.empty.approved.txt  test_parser.function_call_expression.no_args.approved.txt  test_parser.function_call_expression.one_arg.approved.txt  test_parser.function_call_expression.two_or_more_args.approved.txt  test_parser.hello_world.approved.txt  test_parser.identifier_sequence.access_namespace.approved.txt  test_parser.simple_identifier.approved.txt
